--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -60,10 +60,11 @@
 }
 
 .code {
-  background: #fafafa;
+  background: #ff9933;
   border-radius: 5px;
   padding: 0.75rem;
-  font-size: 1.1rem;
+  margin: 1px 10px;
+  font-size: 1.5rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
